@@ -1,3 +1,7 @@
+2007-02-02:
+	- merged the KDE frontend (thanks Riddell)
+	- added tasks support 
+	- add dist-upgrade --mode=server
 2007-02-01:
 	- fix apport integration
 2007-01-29:
